--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "main": "build.js",
   "scripts": {
+    "start": "node build.js",
     "build": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
